# Infnet-Operacionalizacao-de-modelos-com-MLOps

./: .gitignore  README.md  RELATORIO_TECNICO.md  data_prep.py  evaluate.py  intrucao.txt  model_io.py  projeto_mlops_breast_cancer.ipynb  pyproject.toml  requirements.txt  rubrica.txt  serve.py  streamlit_app.py  train.py  tsne_explore.py
.github/workflows/: ci.yml
breast_cancer_mlops/: data_prep.py  paths.py  serve.py
src/breast_cancer_mlops/: evaluate.py  model_io.py  paths.py  streamlit_app.py  train.py  tsne_explore.py
src/breast_cancer_mlops.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: conftest.py  test_smoke.py
