[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "breast-cancer-mlops"
version = "0.1.0"
description = "Classificação breast cancer — pipelines, MLflow, inferência"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "scikit-learn>=1.3.0",
  "mlflow>=2.10.0",
  "fastapi>=0.109.0",
  "uvicorn[standard]>=0.27.0",
  "scipy>=1.11.0",
  "kagglehub>=0.2.0",
  "streamlit>=1.28.0",
  "matplotlib>=3.7.0",
  "pytest>=7.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
